src/test/ui/parser/issues/issue-60075.stderr
error: unexpected closing delimiter: `)`
  --> $DIR/issue-60075.rs:6:10
   |
LL |         let _ = if true {
   |                         - this opening brace...
LL |         });
   |         -^ unexpected closing delimiter
   |         |
   |         ...matches this closing brace

error: this file contains an unclosed delimiter
  --> $DIR/issue-60075.rs:11:7
   |
LL | trait T {
   |         - unclosed delimiter
...
LL |     }
   |       ^

error: aborting due to 2 previous errors

